--- a/Practicas/Reto 1/Index.HTML
+++ b/Practicas/Reto 1/Index.HTML
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en es">
+<html lang="es"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
     <p>Podemos encontrar la siguiente referencia a la etiqueta strong en www.campusmvp.es :
     </p>
     <p><blockquote>La etiqueta strong realmente no está diseñada para dar negrita, aunque el resultado sea en realidad ese. Esta etiqueta es semántica, y por lo tanto sirve para dar contexto al contenido de la página. En este caso la etiqueta sirve para indicar que lo que va dentro de ella reviste importancia o urgencia.
-    </blockquote></p>
+    </blockquote>
     <p>Para marcar palabras o fragmentos de texto que hacen referencia a código de programación usaremos la etiqueta code
     </p>
     <p>La etiqueta q la utilizaremos para marcar citas cortas. Cuando queremos hacer referencia a un bloque de texto extraido de otra página web usamos blockquote
@@ -30,7 +30,6 @@
     <p>Finalmente, si queremos marcar un texto para indicar al navegador que es dirección podemos usar la etiqueta address. Por ejemplo: Vivo en
     </p>
     <p><address>calle calvario número 12</address>
-    </p>
     <p>PD: Por cierto, ¿habéis visto ya la película DUNE?
     </p>
 
