--- a/Examen/1/index.html
+++ b/Examen/1/index.html
@@ -10,18 +10,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="titulo">
-        <h1>hubspot CMS</h1>
-        <h2 class="subtitulo">Manage yout hubspot website without a developer</h2>
-    </div>
-
-    <div class="texto">
-        <p>Con HubSpot, puedes gestionar tu sitio web de manera autónoma sin necesidad de un desarrollador. Su interfaz intuitiva te permite actualizar contenido, modificar diseños y optimizar páginas de forma sencilla. Gracias a herramientas de arrastrar y soltar, puedes hacer cambios rápidamente.</p>
-        <button class="boton">Learn more</button>
-    </div>
-    
-    <div>
-        <img src="https://empresas.infoempleo.com/hrtrends/media/2020/09/HRTrends-oficina-saludable.jpg" alt="" class="imagen">
+    <div class="todo">
+        <div class="titulo">
+            <h1>hubspot CMS</h1>
+            <h2 class="subtitulo">Manage yout hubspot website without a developer</h2>
+        </div>
+        <div class="texto">
+            <p>Con HubSpot, puedes gestionar tu sitio web de manera autónoma sin necesidad de un desarrollador. Su interfaz intuitiva te permite actualizar contenido, modificar diseños y optimizar páginas de forma sencilla. Gracias a herramientas de arrastrar y soltar, puedes hacer cambios rápidamente.</p>
+            <button class="boton">Learn more</button>
+        </div>
+        <div>
+            <img src="https://empresas.infoempleo.com/hrtrends/media/2020/09/HRTrends-oficina-saludable.jpg" alt="" class="imagen">
+        </div>
     </div>
 
     <div class="final">Every bussines deserves to manage their websites without code</div>
